--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,10 @@ footer {
 
 .list-container {
     margin-top: 20px;
+    margin-left: 20px;
+    padding-right: 10px;
     width: 25%;
+    border-right: 3px solid #02699C;
     /* border: 3px green solid; */
     /* background-color: #6D7F86; */
 }
@@ -136,8 +139,7 @@ footer {
 
 .list-group-item:hover {
     /* background-color: rgb(122, 185, 226); */
-    background-color: burlywood;
-
+    background-color: bisque;
 }
 
 /* width */
