--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,12 @@ footer {
     display: flex;
     flex-direction: column;
     height: 100%;
-    justify-content: center;
+    justify-content: space-between;
     margin-left: 30px;
+}
+
+.charts-area {
+    display: flex;
 }
 
 .banner-text {
@@ -149,9 +153,6 @@ footer {
     border: 2px solid lightgrey;
 }
 
-.card img {
-    width: 100px;
-}
 
 .list-group-item:hover {
     /* background-color: rgb(122, 185, 226); */
@@ -186,4 +187,9 @@ footer {
   .my-break {
     flex-basis: 100%;
     height: 0;
+  }
+
+  canvas{
+    width:300px !important;
+    height:200px !important;
   }
