--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,12 +34,9 @@ body {
 }
 
 .weather-banner {
-    /* height: 50px; */
     overflow: hidden;
     position: relative;
     width: 20%;
-    /* background: yellow; */
-    /* border: 1px solid orange; */
 }
 
 .banner-text {
@@ -67,10 +64,7 @@ body {
 }
 
 .carousel-inner {
-    /* border: 3px pink solid; */
     margin-top: 5%;
-    /* display: flex;
-    justify-content: center; */
 }
 
 .carousel-control-next,
@@ -79,6 +73,7 @@ body {
 }
 
 .home-div {
+    display: block;
     min-width: 100%;
     min-height: 100%;
     /* display: flex; */
@@ -88,6 +83,7 @@ body {
     display: flex;
     padding-top: 63px;
     height: 92.5vh;
+    background-color: lightgrey;
 }
 
 .footer {
@@ -96,8 +92,8 @@ body {
     width: 100%;
     height: 60px;
     line-height: 60px;
-    /* background-color: #212529; */
-    background-color: orange;
+    /* background-color: lightgrey; */
+    background-color: grey;
 }
 
 .footer-div {
@@ -105,9 +101,14 @@ body {
     justify-content: flex-end;
 }
 
+.footer-text {
+    color: orange; 
+}
+
 .list-container {
     width: 20%;
     background-color: #212529;
+    padding: 0 10px;
 }
 
 .form-control {
@@ -118,6 +119,29 @@ body {
 
 .list-container p {
     font: white;
+}
+
+.airport-title {
+    text-align: center;
+    background-color: orange;
+}
+
+.nav-link {
+    color: lightgrey;
+}
+
+.nav-link:hover {
+    color: orange;
+}
+
+.runways-section-title {
+    width: 100%;
+    font-style: oblique;
+    padding-left: 20px;
+    color: white;
+    background-color: grey;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .card {
@@ -131,7 +155,7 @@ body {
 }
 
 .list-card {
-    height:100px;
+    height:120px;
     overflow-y: scroll;
     text-align: center;
     margin: 0;
@@ -149,26 +173,19 @@ body {
     /* height: 100%; */
     width: 100%;
     background-color: grey;
-    border-top: 3px #212529 solid;
+    /* border: 3px #212529 solid; */
 }
 
 .list-group-item {
-    background-color: #4d535a;
+    background-color: lightgrey;
     height: 10%;
-    color: beige;
-    border-top: 1px beige solid;
-    border-bottom: 1px beige solid;
+    color: #212529;
+    border: 2px #212529 solid;
 }
 
 .list-group-item:hover {
-    /* background-color: rgb(122, 185, 226); */
     background-color: #212529;
     color: orange;
-}
-
-.runways-section-title {
-    width: 100%;
-    font-style: oblique;
 }
 
 .card-container-div { 
@@ -176,10 +193,13 @@ body {
     flex-wrap: wrap;
 }
 
+/* .airport-info {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+} */
 .airport-data {
     width: 80%;
-    /* padding-left: 50px; */
-    /* border: 3px blue solid; */
     display: flex;
     flex-direction: column;
 }
